// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProForm 📦 submit props actionsRender is one 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <a>
      test
    </a>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submit props actionsRender=()=>[] 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submit props actionsRender=()=>false 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    text
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submit props actionsRender=false 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submit props actionsRender=false 2`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submit props render=()=>[] 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        提交并发布
      </span>
    </button>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submitted value should be consistent with input when precision=0 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            for="count"
            title="人数"
          >
            人数
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-in-form-item ant-input-number-status-success"
                style="width: 100%;"
              >
                <div
                  class="ant-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-handler ant-input-number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up ant-input-number-handler-up-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-handler ant-input-number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-input-number-handler-down-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-input-number-input-wrap"
                >
                  <input
                    aria-valuemin="0"
                    aria-valuenow="22"
                    autocomplete="off"
                    class="ant-input-number-input"
                    id="count"
                    placeholder="请输入"
                    role="spinbutton"
                    step="1"
                    value="22"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submitter props support resetButtonProps 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-default test_button"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 submitter props support submitButtonProps 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary test_button"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 validateFieldsReturnFormatValue 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker ant-picker-status-success ant-picker-focused"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    id="date"
                    placeholder="请选择"
                    size="12"
                    title="2021-08-03"
                    value="2021-08-03"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 valueType digit with precision value 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            for="count"
            title="人数"
          >
            人数
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-in-form-item ant-input-number-status-success"
                style="width: 100%;"
              >
                <div
                  class="ant-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-handler ant-input-number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up ant-input-number-handler-up-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-handler ant-input-number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-input-number-handler-down-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-input-number-input-wrap"
                >
                  <input
                    aria-valuemin="0"
                    aria-valuenow="22"
                    autocomplete="off"
                    class="ant-input-number-input"
                    id="count"
                    placeholder="请输入"
                    role="spinbutton"
                    step="1"
                    value="22"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProForm 📦 when dateFormatter is a Function 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker ant-picker-focused"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    id="datetime"
                    placeholder="请选择"
                    size="21"
                    title="2021-08-09 12:12:12"
                    value="2021-08-09 12:12:12"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            for="time2"
            title="时间"
          >
            时间
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    id="time2"
                    placeholder="请选择时间"
                    readonly=""
                    size="10"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="clock-circle"
                      class="anticon anticon-clock-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="clock-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
